Change group member deletion route
Close #91
