# openapi.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.0
 
 servers:
-- url: https://api.kalastud.io
-  description: Production Server
+  - url: https://api.kalastud.io
+    description: Production Server
 
 info:
   title: PerfectWeek API
@@ -18,14 +18,14 @@ info:
 # Tags
 #
 tags:
-- name: API
-  description: Get information about PerfectWeek's API
-- name: Auth
-  description: Authentication routes
-- name: User
-  description: User management
-- name: Group
-  description: Group management
+  - name: API
+    description: Get information about PerfectWeek's API
+  - name: Auth
+    description: Authentication routes
+  - name: User
+    description: User management
+  - name: Group
+    description: Group management
 
 ####################
 # Routes
@@ -37,7 +37,7 @@ paths:
   /:
     get:
       tags:
-      - API
+        - API
       summary: The PerfectWeek API endpoint
       responses:
         '200':
@@ -57,16 +57,16 @@ paths:
   /auth/validate-email/{uuid}:
     get:
       tags:
-      - Auth
+        - Auth
       summary: Validate an email
       description: Finalize User creation
       parameters:
-      - in: path
-        name: uuid
-        description: Unique identifier generated for email validation
-        required: true
-        schema:
-          type: string
+        - in: path
+          name: uuid
+          description: Unique identifier generated for email validation
+          required: true
+          schema:
+            type: string
       responses:
         '201':
           description: User successfuly validated
@@ -95,7 +95,7 @@ paths:
   /auth/login:
     post:
       tags:
-      - Auth
+        - Auth
       summary: Log a User in
       description: Generation an authentication token for the User
       requestBody:
@@ -141,7 +141,7 @@ paths:
   /users:
     post:
       tags:
-      - User
+        - User
       summary: Create a new User
       description: The User will be created as "pending" until its email is verified
       requestBody:
@@ -192,17 +192,17 @@ paths:
   /users/{pseudo}:
     get:
       tags:
-      - User
+        - User
       summary: Get information about a specific User
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: pseudo
-        required: true
-        description: The User pseudo
-        schema:
-          type: string
+        - in: path
+          name: pseudo
+          required: true
+          description: The User pseudo
+          schema:
+            type: string
       responses:
         '200':
           description: Success
@@ -239,17 +239,17 @@ paths:
 
     put:
       tags:
-      - User
+        - User
       summary: Edit User information
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: pseudo
-        required: true
-        description: The User pseudo
-        schema:
-          type: string
+        - in: path
+          name: pseudo
+          required: true
+          description: The User pseudo
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -308,17 +308,17 @@ paths:
 
     delete:
       tags:
-      - User
+        - User
       summary: Permanently delete a User
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: pseudo
-        required: true
-        description: The User pseudo
-        schema:
-          type: string
+        - in: path
+          name: pseudo
+          required: true
+          description: The User pseudo
+          schema:
+            type: string
       responses:
         '200':
           description: User deleted
@@ -351,17 +351,17 @@ paths:
   /users/{pseudo}/groups:
     get:
       tags:
-      - User
+        - User
       summary: Get all Groups a User belongs to
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: pseudo
-        required: true
-        description: The User pseudo
-        schema:
-          type: string
+        - in: path
+          name: pseudo
+          required: true
+          description: The User pseudo
+          schema:
+            type: string
       responses:
         '200':
           description: Success
@@ -410,10 +410,10 @@ paths:
   /groups:
     post:
       tags:
-      - Group
+        - Group
       summary: Create a new Group
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -466,17 +466,17 @@ paths:
   /groups/{group-id}:
     get:
       tags:
-      - Group
+        - Group
       summary: Get information about a Group
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: group-id
-        required: true
-        description: The Group id
-        schema:
-          type: string
+        - in: path
+          name: group-id
+          required: true
+          description: The Group id
+          schema:
+            type: string
       responses:
         '200':
           description: Success
@@ -510,10 +510,10 @@ paths:
 
     put:
       tags:
-      - Group
+        - Group
       summary: Edit a Group information
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       requestBody:
         required: true
         content:
@@ -521,12 +521,12 @@ paths:
             schema:
               $ref: '#/components/schemas/GroupEdit'
       parameters:
-      - in: path
-        name: group-id
-        required: true
-        description: The Group id
-        schema:
-          type: string
+        - in: path
+          name: group-id
+          required: true
+          description: The Group id
+          schema:
+            type: string
       responses:
         '200':
           description: Group successfully edited
@@ -560,17 +560,17 @@ paths:
 
     delete:
       tags:
-      - Group
+        - Group
       summary: Delete a Group
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: group-id
-        required: true
-        description: The Group id
-        schema:
-          type: string
+        - in: path
+          name: group-id
+          required: true
+          description: The Group id
+          schema:
+            type: string
       responses:
         '200':
           description: Group successfully deleted
@@ -603,19 +603,19 @@ paths:
   /groups/{group-id}/add-members:
     post:
       tags:
-      - Group
+        - Group
       summary: Add new User to a Group
       description: >
         Add new User to a Group and returns the new list of members
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: group-id
-        required: true
-        description: The Group id
-        schema:
-          type: string
+        - in: path
+          name: group-id
+          required: true
+          description: The Group id
+          schema:
+            type: string
       responses:
         '200':
           description: Users added
@@ -661,17 +661,17 @@ paths:
   /groups/{group-id}/members:
     get:
       tags:
-      - Group
+        - Group
       summary: Get all members of a Group
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: group-id
-        required: true
-        description: The Group id
-        schema:
-          type: string
+        - in: path
+          name: group-id
+          required: true
+          description: The Group id
+          schema:
+            type: string
       responses:
         '200':
           description: Success
@@ -708,23 +708,23 @@ paths:
   /groups/{group-id}/members/{pseudo}:
     put:
       tags:
-      - Group
+        - Group
       summary: Edit a member's role inside a Group
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: group-id
-        required: true
-        description: The Group id
-        schema:
-          type: string
-      - in: path
-        name: pseudo
-        required: true
-        description: The Member pseudo
-        schema:
-          type: string
+        - in: path
+          name: group-id
+          required: true
+          description: The Group id
+          schema:
+            type: string
+        - in: path
+          name: pseudo
+          required: true
+          description: The Member pseudo
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -774,37 +774,30 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
 
-  /groups/{group-id}/kick-members:
-    post:
+    delete:
       tags:
-      - Group
-      summary: Remove Users from a Group
+        - Group
+      summary: Remove a member from a Group
       description: >
-        Remove members from a roup and returns the updated member list
+        Remove a member from a roup and returns the updated members list
       security:
-      - BearerAuth: []
+        - BearerAuth: []
       parameters:
-      - in: path
-        name: group-id
-        required: true
-        description: The Group id
-        schema:
-          type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                members:
-                  type: array
-                  items:
-                    type: string
-                    example: user_to_kick
+        - in: path
+          name: group-id
+          required: true
+          description: The Group id
+          schema:
+            type: string
+        - in: path
+          name: pseudo
+          required: true
+          description: The member pseudo
+          schema:
+            type: string
       responses:
         '200':
-          description: Users successfully kicked
+          description: User successfully kicked
           content:
             application/json:
               schema:
@@ -951,8 +944,8 @@ components:
     GroupMemberRole:
       type: string
       enum:
-      - Admin
-      - Spectator
+        - Admin
+        - Spectator
 
     GroupMember:
       type: object
