# sources/api/routes/groups/index.ts
@@ -21,8 +21,8 @@ router.get('/:group_id/members', AsyncHandler(loggedOnly), AsyncHandler(GroupCon
 
 router.post('/:group_id/add-members', AsyncHandler(loggedOnly), AsyncHandler(GroupController.addUsersToGroup));
 
-router.put('/:group_id/members/:user_id', AsyncHandler(loggedOnly), AsyncHandler(GroupController.editUserStatus));
+router.put('/:group_id/members/:user_pseudo', AsyncHandler(loggedOnly), AsyncHandler(GroupController.editUserStatus));
 
-router.post('/:group_id/kick-members', AsyncHandler(loggedOnly), AsyncHandler(GroupController.kickUsersFromGroup));
+router.post('/:group_id/members/:user_pseudo', AsyncHandler(loggedOnly), AsyncHandler(GroupController.kickUserFromGroup));
 
 export default router;
